Update Open Graph and Twitter URLs in index.html; adjust Slideshow component props

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://johncenacountdown.com/">
+    <meta property="og:url" content="https://john-cena-mu.vercel.app/">
     <meta property="og:title" content="John Cena's Final WWE Countdown | How Many Nights Left">
     <meta property="og:description" content="Track how many nights John Cena has left in WWE. Countdown to the end of an era as the 16-time world champion prepares for his wrestling retirement.">
     <meta property="og:image" content="https://images.pexels.com/photos/159638/sydney-opera-house-australia-building-159638.jpeg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://johncenacountdown.com/">
+    <meta property="twitter:url" content="https://john-cena-mu.vercel.app/">
     <meta property="twitter:title" content="John Cena's Final WWE Countdown | How Many Nights Left">
     <meta property="twitter:description" content="Track how many nights John Cena has left in WWE. Countdown to the end of an era as the 16-time world champion prepares for his wrestling retirement.">
     <meta property="twitter:image" content="https://images.pexels.com/photos/159638/sydney-opera-house-australia-building-159638.jpeg">
