Update SEO keywords in index.html for better search visibility

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     
     <!-- Primary Meta Tags -->
     <title>John Cena's Final WWE Countdown | How Many Nights Left</title>
-    <meta name="title" content="John Cena's Final WWE Countdown | How Many Nights Left">
+    <meta name="title" content="John Cena's Final WWE Countdown | Number of nights left for John Cena">
     <meta name="description" content="Track how many nights John Cena has left in WWE. Countdown to the end of an era as the 17-time world champion prepares for his wrestling retirement.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://john-cena-mu.vercel.app/">
-    <meta property="og:title" content="John Cena's Final WWE Countdown | How Many Nights Left">
+    <meta property="og:title" content="John Cena's Final WWE Countdown | Number of nights left for John Cena">
     <meta property="og:description" content="Track how many nights John Cena has left in WWE. Countdown to the end of an era as the 16-time world champion prepares for his wrestling retirement.">
     <meta property="og:image" content="https://raw.githubusercontent.com/CodebyShauryaIPU/John-Cena/refs/heads/main/ucme.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://john-cena-mu.vercel.app/">
-    <meta property="twitter:title" content="John Cena's Final WWE Countdown | How Many Nights Left">
+    <meta property="twitter:title" content="John Cena's Final WWE Countdown | Number of nights left for John Cena">
     <meta property="twitter:description" content="Track how many nights John Cena has left in WWE. Countdown to the end of an era as the 16-time world champion prepares for his wrestling retirement.">
     <meta property="twitter:image" content="https://raw.githubusercontent.com/CodebyShauryaIPU/John-Cena/refs/heads/main/ucme.png">
     
